A Pilot to manage the Cassandra process
* A pilot command for managing a Cassandra subprocess
* Installed into the Cassandra container via an InitContainer
* Watches for a Pilot resource with the name and namespace, which are supplied as command line arguments.
* Then launches the Cassandra subprocess.

Fixes: #141

--- a/.dockerignore
+++ b/.dockerignore
@@ -2,3 +2,4 @@
 !navigator-controller_linux_amd64
 !navigator-apiserver_linux_amd64
 !navigator-pilot-elasticsearch_linux_amd64
+!navigator-pilot-cassandra_linux_amd64
