--- a/contrib/charts/cassandra/templates/cassandracluster.yaml
+++ b/contrib/charts/cassandra/templates/cassandracluster.yaml
@@ -18,3 +18,7 @@ spec:
     repository: {{ .Values.image.repository }}
     tag: {{ .Values.image.tag }}
     pullPolicy: {{ .Values.image.pullPolicy }}
+  pilotImage:
+    repository: {{ .Values.pilotImage.repository }}
+    tag: {{ .Values.pilotImage.tag }}
+    pullPolicy: {{ .Values.pilotImage.pullPolicy }}
