--- a/contrib/charts/cassandra/values.yaml
+++ b/contrib/charts/cassandra/values.yaml
@@ -7,6 +7,10 @@ image:
   repository: gcr.io/google-samples/cassandra
   tag: v12
   pullPolicy: IfNotPresent
+pilotImage:
+  repository: jetstackexperimental/navigator-pilot-cassandra
+  tag: latest
+  pullPolicy: IfNotPresent
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
