--- a/contrib/charts/cassandra/templates/cassandracluster.yaml
+++ b/contrib/charts/cassandra/templates/cassandracluster.yaml
@@ -14,6 +14,7 @@ spec:
   nodePools:
   - name: ringnodes
     replicas: {{ .Values.replicaCount }}
+    serviceAccount: {{ template "serviceAccountNameForRingNodes" . }}
   image:
     repository: {{ .Values.image.repository }}
     tag: {{ .Values.image.tag }}
