Add a CassandraCluster.Version field
* CassandraCluster now has a Version field which must be a valid semver.
* CassandraCluster.Image is now optional
* and if ommitted will default to the image from docker.io/cassandra matching the supplied semver version.
* If Image is supplied, its repository and tag must be supplied, but pullPolicy is optional.
* Created shared test cases for NavigatorClusterConfig validation.
* In the Cassandra helm chart, I've removed the ability to override the cassandra image tag and repository for now, because its not needed in any of the tests.

Fixes: #234

--- a/docs/quick-start/cassandra-cluster.yaml
+++ b/docs/quick-start/cassandra-cluster.yaml
@@ -3,6 +3,7 @@ kind: "CassandraCluster"
 metadata:
   name: "demo"
 spec:
+  version: "3.11.1"
   cqlPort: 9042
   sysctls:
   - "vm.max_map_count=0"
@@ -13,7 +14,3 @@ spec:
       enabled: true
       size: "5Gi"
       storageClass: "default"
-  image:
-    repository: "cassandra"
-    tag: "3"
-    pullPolicy: "IfNotPresent"
