--- a/contrib/charts/cassandra/templates/cassandracluster.yaml
+++ b/contrib/charts/cassandra/templates/cassandracluster.yaml
@@ -1,4 +1,4 @@
-apiVersion: navigator.jetstack.io/v1alpha1
+apiVersion: "navigator.jetstack.io/v1alpha1"
 kind: "CassandraCluster"
 metadata:
   name: {{ template "fullname" . }}
@@ -8,6 +8,7 @@ metadata:
     release: {{ .Release.Name | quote }}
     heritage: {{ .Release.Service | quote }}
 spec:
+  version: {{ .Values.version | quote }}
   cqlPort: {{ .Values.cqlPort }}
   sysctls:
   - "vm.max_map_count=0"
@@ -18,10 +19,6 @@ spec:
       enabled: {{ .Values.persistence.enabled }}
       size: {{ .Values.persistence.size | quote }}
       storageClass: {{ .Values.persistence.storageClass | quote }}
-  image:
-    repository: {{ .Values.image.repository | quote }}
-    tag: {{ .Values.image.tag | quote }}
-    pullPolicy: {{ .Values.image.pullPolicy | quote }}
   pilotImage:
     repository: {{ .Values.pilotImage.repository | quote }}
     tag: {{ .Values.pilotImage.tag | quote }}
