--- a/contrib/charts/cassandra/values.yaml
+++ b/contrib/charts/cassandra/values.yaml
@@ -3,10 +3,7 @@
 # Declare variables to be passed into your templates.
 replicaCount: 1
 cqlPort: 9042
-image:
-  repository: "cassandra"
-  tag: "3"
-  pullPolicy: "IfNotPresent"
+version: "3.11.1"
 pilotImage:
   repository: "jetstackexperimental/navigator-pilot-cassandra"
   tag: "latest"
